app/bin/test/programs/invalid/foonctions/badNumberOfArguments.exe
foo g(a: Int) -> Int = {
    if a > 2 then 3 else 4
}

foo main() -> Int = {
    g(1, 2)
}
